# belief_activation

./: .gitignore  README.md  config.yaml  demo.ipynb  demo_baseline_vs_tgn_only.ipynb  demo_tgn.ipynb  pyproject.toml
docs/: belief_activation_onboarding.md  tgn_dynamics.md
docs/superpowers/plans/: 2026-06-21-hybrid-signed-gnn-substrate.md
notebooks/: _ama_judge_cache.json  amabench_substrate_ab.ipynb  belief_activation_tgn.ipynb  meta_strategy_analysis.ipynb  signed_gnn_approach2.ipynb  tgn_eval.ipynb  utils.py
scripts/: _ama_substrate_ab.py  _gen_amabench_ab_notebook.py  _gen_ba_tgn_notebook.py  _gen_meta_strategy_notebook.py  _gen_signed_gnn_notebook.py  _gen_tgn_eval_notebook.py  _gym_judge_cache.json  _gym_tgn_eval.py  _gym_tgn_results.json  compare_baseline_vs_tgn.py  fetch_financebench.py  validate_financebench.py
scripts/experiments/: numeric_precision_probe.py  requirements_probe.txt  simple_gcn_numeric.py  tgn_numeric_supervised.py  typed_gnn_probe.py
src/multi_agent/: __init__.py  agent.py  config.py  graph.py  imputation.py  judge.py  psro.py  router.py  runner.py  signed_gnn.py  snapshot.py  tgn.py  tgn_runner.py
tests/: test_belief_graph.py  test_config.py  test_e2e_tgn_message_passing.py  test_hybrid_substrate.py  test_imputation.py  test_integration.py  test_judge_dispatch_retry.py  test_llm_judge.py  test_local_llm_judge.py  test_notebook.py  test_psro_auc.py  test_router.py  test_signed_gnn.py  test_snapshot.py  test_tgn.py  test_tgn_device.py  test_tgn_gpu_smoke.py  test_tgn_graph_integration.py  test_tgn_message_passing.py  test_tgn_only.py  test_tgn_perf_invariants.py  test_tgn_regression.py  test_trainer_snapshot.py
(+7 files in other folders)
