[project]
name = "multi-agent"
version = "0.1.0"
description = "Correlated equilibrium over belief graphs via masked multi-agent attention"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "torch>=2.0",
    "transformers>=4.51",
    "accelerate>=0.26",
    "google-genai>=0.3",
    "torch-geometric>=2.8.0",
]

[project.optional-dependencies]
gpu = [
    "bitsandbytes>=0.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_agent"]

[dependency-groups]
dev = [
    "fakeredis>=2.36.2",
    "lupa>=2.8",
    "pytest>=7.0",
    "pytest-asyncio>=1.4.0",
]
notebook = [
    "datasets>=4.8.5",
    "ipykernel>=6.0",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "sentence-transformers>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
